Stat ready, functional version 0.4 =)

--- a/css/index.css
+++ b/css/index.css
@@ -12,5 +12,13 @@ button {
 }
 
 .progress {
-	height: 41px;
+	height: 30px;
+}
+
+.table .progress {
+	margin-bottom: 0px;
+}
+
+#frame-btn-stat {
+	-webkit-app-region: drag;
 }
